# LaMoTO

./: .gitignore  README.md  pyproject.toml
doc/: TODO  design.md
src/lamoto/: __init__.py
src/lamoto/augment/: perturbation.py
src/lamoto/augmenting/: augment_dataset.py  augment_model.py  vit_as_lm.py
src/lamoto/measuring/: __init__.py  _core.py  aqa.py  bpc.py  cm.py  f1.py  las.py  ppl.py  pppl.py  qa.py
src/lamoto/modelling/: dependency_parsing.py
src/lamoto/preprocessing/: ud.py  wordlevel.py
src/lamoto/tasks/: __init__.py  _core.py  clm.py  clm_pretraining.py  cola.py  dp.py  mbr.py  mc.py  mlm.py  ner.py  pos.py  qa.py  rte.py
src/lamoto/tasks/glue/: __init__.py  _general.py  cola.py  glue.py  mnli.py  mrpc.py  qnli.py  qqp.py  rte.py  sst2.py  stsb.py  wnli.py
src/lamoto/tasks/lm/: __init__.py  _general.py  clm.py  corpora.py  mlm.py
src/lamoto/tasks/superglue/: __init__.py  _general.py  boolq.py  cb.py  copa.py  multirc.py  wic.py
src/lamoto/trainer/: callbacks.py  hyperparameters.py  trainers.py
src/lamoto/training/: __init__.py  core.py  lineages.py  training.py  tuning.py
src/lamoto/training/auxiliary/: backends.py  callbacks.py  hyperparameters.py
src/lamoto/util/: datasets.py  exceptions.py  schedules.py  strings.py  visuals.py
tst/: preamble.py
tst/datasets/: tst_balancing.py  tst_caching.py
tst/legacy/: suparwithloss.py
tst/measuring/: test_pppl.py
tst/training/: finetuning.py  preprocessing.py  tst_callbacks.py  tst_finetuning.py  tst_preprocessing.py  tst_pretraining.py
