[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lamoto"
version = "2024.09.01"  # Don't forget to change to change the lamoto.__version__ variable.
requires-python = ">= 3.10"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Language Modelling Tasks as Objects (LaMoTO) provides a framework for language model training (masked and causal, pretraining and finetuning) where the tasks, not just the models, are classes themselves."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["language models", "LMs", "NLP", "PyTorch", "OOP", "object-oriented"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers >= 4.24.0",
    "datasets >= 2.18.0",
    "evaluate >= 0.4.1",
    "pyfiglet >= 1.0.2",

    "supar @ git+https://github.com/yzhangcs/parser"
]

# These GitHub dependencies aren't optional, but if you already have them installed as editable, pip will override
# that installation with an installation in site-packages. Hence, if this is the case for you, install these manually.
[project.optional-dependencies]
github = [
    "archit[github] @ git+https://github.com/bauwenst/ArchIt",
    "tktkt[github]  @ git+https://github.com/bauwenst/TkTkT",
    "modest[github] @ git+https://github.com/bauwenst/MoDeST",
    "fiject         @ git+https://github.com/bauwenst/fiject"
]