[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lamoto"
version = "v2026.05.01"  # Don't forget to change to change the lamoto.__version__ variable.
requires-python = ">= 3.9"
authors = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
maintainers = [
  {name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}
]
description = "Language Modelling Tasks as Objects (LaMoTO) provides a framework for language model training (masked and causal, pretraining and finetuning) where the tasks, not just the models, are classes themselves."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["language models", "LMs", "NLP", "PyTorch", "OOP", "object-oriented"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers >= 4.45.1",  # Note: training is unstable between >4.45.2 and at least 4.48.0.
    "datasets <= 3.6.0",  # Datasets 4 no longer supports CoNLL-2003. https://github.com/huggingface/datasets/issues/7675#issuecomment-3053565137,
    "evaluate >= 0.4.1",
    "pyfiglet >= 1.0.2",
    "wandb",
    "scikit-learn",  # Technically a dependency of evaluate, but they refuse to add it to their metadata.
    "conllu",
    "zstandard"  # Needed for SlimPajama dataset. HuggingFace won't tell you, of course. Instead, SentencePiece will complain that your corpus has 0 sentences.
]

[project.optional-dependencies]
all = [  # All my packages, from PyPI.
    "fiject",
    "tktkt[all]",
    "modest[all]",
    "archit[all]",
    "supar_bauwenst"
]
github = [  # All my packages, from GitHub.
]

[project.urls]
Source = "https://github.com/bauwenst/LaMoTO"
Issues = "https://github.com/bauwenst/LaMoTO/issues"
